--- a/internal-common/pom.xml
+++ b/internal-common/pom.xml
@@ -8,33 +8,23 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.yz</groupId>
-    <artifactId>service-verificationcode</artifactId>
+    <artifactId>internal-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>service-verificationcode</name>
-    <description>service-verificationcode</description>
+    <name>internal-common</name>
+    <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.yz</groupId>
-            <artifactId>internal-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
