service-price调用service-map

--- a/service-price/src/main/resources/application.yml
+++ b/service-price/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8093
+spring:
+  application:
+    name: service-price
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
