--- a/service-map/src/main/resources/application.yml
+++ b/service-map/src/main/resources/application.yml
@@ -3,4 +3,10 @@ server:
 
 amap:
   key: 7f9bbe63d9c6abcfa06c092b13a67f24
-
+spring:
+  application:
+    name: service-map
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
