--- a/service-driver-user/src/main/resources/application.yml
+++ b/service-driver-user/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/service-driver-user?characterEncoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: root
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
   application:
     name: service-driver-user
