--- a/api-driver/pom.xml
+++ b/api-driver/pom.xml
@@ -8,27 +8,23 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.yz</groupId>
-    <artifactId>internal-common</artifactId>
+    <artifactId>api-driver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>internal-common</name>
-    <description>Demo project for Spring Boot</description>
+    <name>api-driver</name>
+    <description>api-driver</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
