--- a/api-driver/src/main/resources/application.yml
+++ b/api-driver/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 server:
   port: 8097
-
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  application:
+    name: api-driver
