--- a/service-order/src/main/resources/application.yml
+++ b/service-order/src/main/resources/application.yml
@@ -12,3 +12,10 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
+logging:
+  level:
+    com.baomidou: debug
