在service-driver-user和service-order中添加判断当前城市是否有可用司机的代码测试完成

--- a/service-driver-user/pom.xml
+++ b/service-driver-user/pom.xml
@@ -71,6 +71,20 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/java</directory>&lt;!&ndash;所在的目录&ndash;&gt;-->
+<!--                <includes>&lt;!&ndash;包括目录下的.properties,.xml文件都会扫描到&ndash;&gt;-->
+<!--                    <include>**/*.properties</include>-->
+<!--                    <include>**/*.xml</include>-->
+<!--                </includes>-->
+<!--                <filtering>false</filtering>-->
+<!--            </resource>-->
+<!--        </resources>-->
     </build>
+
+
+
+
 
 </project>
