--- a/service-driver-user/src/main/resources/application.yml
+++ b/service-driver-user/src/main/resources/application.yml
@@ -18,3 +18,4 @@ logging:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mapper/*.xml
