--- a/service-order/src/main/resources/application.yml
+++ b/service-order/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
 logging:
   level:
     com.baomidou: debug
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
