--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <module>api-boss</module>
         <module>api-driver</module>
         <module>service-order</module>
-        <module>sse-driver-client-web</module>
+        <module>service-sse-push</module>
     </modules>
     <packaging>pom</packaging>
 
