--- a/service-pay/pom.xml
+++ b/service-pay/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.yz</groupId>
-    <artifactId>test-alipay</artifactId>
+    <artifactId>service-pay</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>test-alipay</name>
+    <name>service-pay</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>8</java.version>
@@ -32,6 +32,11 @@
             <artifactId>alipay-easysdk</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
 
     </dependencies>
 
